--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : “kaze tachine”
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : “bettyyan”
+description              : "Le vent se lève, il faut tenter de vivre."
+url                      : # the base hostname & protocol for your site e.g. "https://bettyyan.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -61,11 +61,11 @@ google_ad_slot           :
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : "bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
-  email            :
+  name             : “bettyyan”
+  avatar           : "avatar.jpg"
+  bio              : "Le vent se lève, il faut tenter de vivre."
+  location         : “Zhejiang, China”
+  email            : “bettydingyan@hotmail.com”
   uri              :
   bitbucket        :
   codepen          :
