--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : “kaze tachine”
+title                    : 風立ちぬ
 title_separator          : "-"
 name                     : “bettyyan”
 description              : "Le vent se lève, il faut tenter de vivre."
