--- a/_config.yml
+++ b/_config.yml
@@ -61,11 +61,11 @@ google_ad_slot           :
 
 # Site Author
 author:
-  name             : “bettyyan”
+  name             : bettyyan
   avatar           : "avatar.jpg"
   bio              : "Le vent se lève, il faut tenter de vivre."
   location         : Zhejiang, China
-  email            : “bettydingyan@hotmail.com”
+  email            : bettydingyan@hotmail.com
   uri              :
   bitbucket        :
   codepen          :
