--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,16 @@
 # main links links
 main:
-  - title: “和歌”
+  - title: 和歌
     url: 
 
-  - title: “アニメ”
+  - title: アニメ
     url: 
 
-  - title: “漫画”
+  - title: 漫画
     url: 
 
-  - title: “ドラマ”
+  - title: ドラマ
     url: 
 
-  - title: "About"
+  - title: About
     url: 
