--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ teaser                   : # filename of teaser fallback teaser image placed in 
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : disqus
+  provider               : false (default), "disqus", "facebook", "google-plus", custom"
   disqus:
-    shortname            : kazetachine
+    shortname            : 
   facebook:
     # https://developers.facebook.com/docs/plugins/comments
     appid                :
